--- a/Gym Website/fittness-club.html
+++ b/Gym Website/fittness-club.html
@@ -199,14 +199,15 @@
 						</div>
 						<div class="item wow bounceInUp">
 							<div class="item-text">
-								<h4>Stretching Training</h4>
+								<h4>Workout Training</h4>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 								<a href="">Get Details</a>
 							</div>
 							<div class="item-img">
-								<img src="images/class1.jpg" alt="classes" />
+								<img src="https://media.gettyimages.com/id/535861527/photo/healthy-young-female-weight-training-in-gym.jpg?s=612x612&w=0&k=20&c=DF9Up_xdAf08ImSNaMOE3x3eo0ShXegrmjpvSsy6mm4="
+									alt="classes" />
 								<div class="price">
-									$99
+									$89
 								</div>
 							</div>
 						</div>
