--- a/E-Shop/Home.html
+++ b/E-Shop/Home.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="Cs/Style.css" rel="stylesheet" />
-    <script src="Js/jquery-3.2.1.min.js"></script>
+    <link href="Style.css" rel="stylesheet" />
+    <script src="jquery-3.2.1.min.js"></script>
 
     <style>
         @import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Lobster+Two|Pacifico');
     </style>
 </head>
 
-<body>
+<body id="home">
     <section>
 
         <div class="section1">
